--- a/nuxt-UI_Collection/assets/css/tailwind.css
+++ b/nuxt-UI_Collection/assets/css/tailwind.css
@@ -3,16 +3,21 @@
 @tailwind utilities;
 
 body {
-    @apply w-full box-border bg-[#f8f8f8]
+    @apply w-full box-border bg-[#f8f8f8] dark:bg-slate-900
 }
 
 * {
     @apply m-0 p-0
 }
 
+
+
 @layer components {
 
-    .blue-text {@apply text-[#1C6EA4]}
+    input, textarea {
+        @apply dark:bg-gray-700
+    }
+    .blue-text {@apply text-[#1C6EA4] dark:text-[#3ea1e2]}
     .blue-background {@apply bg-[#1C6EA4]}
     .light-blue-bg {@apply bg-[#d0e4f5]}
     .body-text {@apply text-[13px]}
@@ -26,9 +31,9 @@ body {
     .cheatsheet-header {@apply flex items-center text-[24px] md:text-[32px] text-[#1C6EA4] font-bold pl-[20px]}
     
     /* section header */
-    .section {@apply text-[#444] bg-white w-full md:max-w-[429px] rounded-lg relative py-2 md:mr-5 mb-[30px]}
-    .section-header {@apply inline-block text-[20px] text-[#555] capitalize bg-[#fff] pt-[5px] px-[15px] rounded-t-lg}
-    .section-subheader {@apply w-full bg-[#1c6ea41a] text-[12px] text-[#555] font-bold px-[5px] mt-3 mb-1}
+    .section {@apply text-[#444] dark:text-gray-100 bg-white dark:bg-gray-600 w-full md:max-w-[429px] rounded-lg relative py-2 md:mr-5 mb-[30px]}
+    .section-header {@apply inline-block text-[20px] text-[#555] dark:text-gray-100 capitalize bg-[#fff] dark:bg-gray-600 pt-[5px] px-[15px] rounded-t-lg}
+    .section-subheader {@apply w-full bg-[#1c6ea41a] dark:bg-gray-700 text-[12px] text-[#555] dark:text-gray-100 font-bold px-[5px] mt-3 mb-1}
     .section-bold-text {@apply text-[13px] font-bold col-span-1}
     .section-italic-text {@apply text-[13px] italic col-span-2}
     .text-grid {
@@ -42,7 +47,7 @@ body {
     .content {@apply bg-white text-[#444] pt-[1px] px-[10px] pb-[9px]}
 
     /* useful links */
-    .useful-links-btn {@apply blue-text font-bold bg-[#eee] rounded-lg inline-block px-[26px] py-[2px] mt-[5px] mr-[7px]}
+    .useful-links-btn {@apply blue-text font-bold bg-[#eee] dark:bg-gray-700 rounded-lg inline-block px-[26px] py-[2px] mt-[5px] mr-[7px]}
 
     /* how to use? */
     .settingRow {@apply pb-[5px] flex w-full}
@@ -80,7 +85,7 @@ body {
 
     /* article */
     .article-wrapper {@apply w-full text-[16px] flex justify-center }
-    .article {@apply p-1 md:px-[25px] md:pt-[15px] md:pb-[10px] my-5 bg-white max-w-[900px]}
+    .article {@apply p-1 md:px-[25px] md:pt-[15px] md:pb-[10px] my-5 bg-white dark:bg-gray-600 dark:text-gray-100 max-w-[900px]}
     .article article {@apply px-[25px] pt-[15px] pb-[10px] my-5}
     .article-header {@apply text-[18px] blue-text font-bold leading-[1.5]}
     .article-subheader {@apply font-bold}
